# kcm-about-extended

./: CMakeLists.txt
src/: CMakeLists.txt  Module.cpp  Module.h  Module.ui  about-extended.desktop  main.cpp  openglinfo.cpp  openglinfo.h
